@@ -1,3 +1,10 @@
+2005-09-19  J"orn Rennecke <joern.rennecke@st.com>
+
+	* interp.c (<sys/mman.h>): Include.
+	(mcalloc): New function / macro.
+	(mfree): New macro.
+	(sim_size): Use mcalloc and mfree.
+
 2005-08-02  J"orn Rennecke <joern.rennecke@st.com>
 
 	* interp.c (strswaplen): Add one for '\0' delimiter.
